--- a/home/client/assets/css/layout.css
+++ b/home/client/assets/css/layout.css
@@ -30,10 +30,11 @@
 
 .home{
     padding: 0;
+    text-align: center;
 }
 
 .stock-item{
-    height:65px;
+    max-width:800px;
     padding: 10px 10px 0 10px;
     font-size: 16px;
     margin-left: 60px;
