--- a/login/server/views/index.jade
+++ b/login/server/views/index.jade
@@ -9,10 +9,10 @@ html(lang="en", ng-app="login")
         script.
             var serviceVars = {
                 package: {
-                    version: #{package.version}
+                    version: '#{package.version}'
                 },
                 runner: {
-                    version: #{runner.version}
+                    version: '#{runner.version}'
                 }
             };
 
