--- a/login/client/assets/css/layout.css
+++ b/login/client/assets/css/layout.css
@@ -32,7 +32,7 @@ body, html {
     margin-right: auto;
     clear:both;
 
-    background-image: url("../images/logo.png");
+    background-image: url("../images/facebook-logo-png-18.png");
     background-repeat: no-repeat;
     background-size: contain;
 }
